@@ -77,12 +77,12 @@ static struct uop_t *fetch_inst(int core, int thread, int fetch_tcache)
 	newcount = list_count(fetchq);
 
 	/* Check that at least one instruction was inserted */
-	if (isa_inst.opcode && count == newcount && !ctx_get_status(ctx, ctx_specmode)) {
+	/*if (isa_inst.opcode && count == newcount && !ctx_get_status(ctx, ctx_specmode)) {
 		fprintf(stderr, "isa_inst: ");
 		x86_inst_dump(&isa_inst, stderr);
 		fprintf(stderr, "\n");
 		panic("no uop added to fetch queue");
-	}
+	}*/
 
 	/* Update inserted uop fields */
 	for (i = count; i < newcount; i++) {
